<resources>
    <string name="app_name">SurveyCigga</string>
    <string name="txtChoose">Please choose brands of ciggarettes  in  dropdownlist below:</string>
    <string-array name="brands">
        <item>Peter Stuyvesant Red</item>
        <item>Peter Stuyvesant Blue</item>
        <item>Voyager Gold</item>
        <item>Voyager Green</item>
        <item>Voyager White</item>
        <item>Voyager Red</item>
        <item>Voyager Blue</item>
        <item>Voyager Siver</item>
        <item>Voyager Slims </item>
        <item>Voyager Cherry</item>
        <item>Dunhill</item>
        <item>Camel</item>
        <item>Pallmall</item>

    </string-array>
    <string name="title_activity_visability">Visability</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rep_manger_question">Is the rep known to the manager by name?</string>
    <string name="kiosk_question">Is the rep known to the kiosk person by name?</string>
    <string name="GTLC">Is the product layout  as per GLTC guidlines?</string>
    <string name="spar">Is spar 300 promo implemented?</string>
    <string name="display_unit">Is display unit implemented?</string>
    <string name="menthol">Is new menthol poster implemented?</string>
</resources>
